# Sisyphus

./: Cargo.toml  Makefile.toml  README.md  rustfmt.toml
.cargo/: config.toml
examples/: gen_key.rs  quick_dev.rs  quick_dev_home.rs
src/: config.rs  error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs
src/log/: mod.rs
src/model/: common.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/sql/dev_init/: 00_recreated_db.sql  01_create_scheme.sql  02_sample_value.sql
src/web/: error.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
