[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AwesomeApp rust-web-app."
homepage = "https://awesomeapp.dev"
repository = "https://github.com/awesomeapp-dev/rust-web-app"


[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ['env-filter'] }
# -- sqlx
sqlx = { version = "0.7.4", features = [
    'runtime-tokio-rustls',
    'time',
    'uuid',
    'postgres',
] }
sqlb = "0.4.0"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Encrypt
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12"
base64-url = "3"
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "3.1.1"
